# reachablecode

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: CI.yml
ASCII-UML-Generator/: CMakeLists.txt  README
ASCII-UML-Generator/include/: Buffer.h  ClassDiagram.h  ClassNode.H  ClassNode.h  Drawing.H  Drawing.h  Drawing.h.autosave  NCursesManager.h  Pos.h
ASCII-UML-Generator/src/: main.cpp
allocCatcher/: CMakeLists.txt
allocCatcher/src/: main.cpp
almost_always_lockfree/: CMakeLists.txt
almost_always_lockfree/tests/: CMakeLists.txt  tests.cpp
common/include/: AudioDevice.h  CountdownTimer.h  LockFreeSpsc.h  Logger.h  Math.h  OpenCVUtils.h  TimeLogger.h  VideoWindow.h  almost_always_lockfree_queue.h  lockfree_spsc.h  math_utils.hpp  simple_parser.hpp
conceptsInterfaces/: CMakeLists.txt
conceptsInterfaces/src/: main.cpp
coroutinesEnumerate/include/: cppcoro_generator_hacked.hpp
cudp/: CMakeLists.txt  README.md  compile_and_run.sh  compile_and_run_receiver.sh  compile_and_run_sender.sh  conanfile.txt
cudp/include/: InputBuffer.h
cudp/src/: main.cpp  receiver.cpp  sender.cpp
doubly_mapped_lockfree_queue/: CMakeLists.txt  README.md
doubly_mapped_lockfree_queue/apps/: CMakeLists.txt  message_header.h  reader.cpp  writer.cpp
doubly_mapped_lockfree_queue/include/: control_block.h  file_descriptor.h  mapped_memory.h  queue_base.h  queue_reader.h  queue_writer.h
doubly_mapped_lockfree_queue/plot/: create_histogram.gnuplot
doubly_mapped_lockfree_queue/src/: CMakeLists.txt  mapped_memory.cpp  queue_reader.cpp  queue_writer.cpp
doubly_mapped_lockfree_queue/tests/: CMakeLists.txt  tests.cpp
exshelf/: CMakeLists.txt  FindTesseract.cmake  README.md  README.txt  compile_and_run.sh
exshelf/include/: Library.h  OCRText.h
exshelf/src/: main.cpp
mosquito_detector/: CMakeLists.txt  conanfile.py  sanitizer_blacklist.txt
mosquito_detector/apps/: CMakeLists.txt  main.cpp
mosquito_detector/libraries/include/: mosquito_detector.hpp  mosquito_finder.hpp
mosquito_detector/libraries/src/: mosquito_detector.cpp  mosquito_finder.cpp
mosquito_detector/src/: main.cpp  mosquito_detector.cpp  mosquito_detector.h
mosquito_detector/test_package/: conanfile.py
mosquito_detector/tests/: CMakeLists.txt  tests.cpp
neural_network_physics/: CMakeLists.txt  README.md
neural_network_physics/docs/: formulas.latex
neural_network_physics/example/: CMakeLists.txt  main.cpp
neural_network_physics/include/: layer.h  layer_base.h  multiplicative_layer.h  multiplicative_neuron.h  network.h  neuron.h  neuron_base.h  standard_layer.h  standard_neuron.h
neural_network_physics/plots/: plot.gnuplot
neural_network_physics/src/: CMakeLists.txt  layer_base.cpp  network.cpp  neuron_base.cpp
neural_network_physics/tests/: CMakeLists.txt  tests.cpp
openCLMonteCarlo/: CMakeLists.txt  README.md  README.txt  create_histogram.gnuplot
openCLMonteCarlo/src/: calculate_trajectory.cl  main.cpp
openGLMonteCarlo/: CMakeLists.txt  README.txt
openGLMonteCarlo/src/: calculate_trajectory.cl  main.cpp
qtHelloWorld/: CMakeLists.txt  README.md
qtHelloWorld/include/: MainWindow.h
qtHelloWorld/src/: main.cpp
reflections_on_uml/: README.md  main.cpp
simple_parser/: CMakeLists.txt
simple_parser/apps/: main.cpp
simple_parser/libraries/include/: simple_parser.hpp
simple_parser/libraries/src/: simple_parser.cpp
simple_parser/tests/: tests.cpp
simple_thread_pool/: CMakeLists.txt
simple_thread_pool/apps/: CMakeLists.txt  main.cpp
simple_thread_pool/libraries/include/: simple_thread_pool.hpp
simple_thread_pool/libraries/src/: simple_thread_pool.cpp
simple_thread_pool/tests/: CMakeLists.txt  tests.cpp
utils/: .bashrc  .gdbinit  .tmux.conf  .vimrc  TimeLogger.h  clang-format-directory.sh  godbolt.sh  godbolt_clang.sh  gotbolt.sh  gotbolt_clang.sh  launch.json
video_chat/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  default_clang.profile  emscripten.profile
video_chat/app/: CMakeLists.txt  main.cpp
video_chat/include/: image_utils.h  imgui_window_manager.h
video_chat/src/: CMakeLists.txt
video_chat/tests/: CMakeLists.txt  tests.cpp
